<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="student_housing">Student Housing</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="Confirm_password">Cornfirmpassword</string>
    <string name="confirm_password">Confirm password</string>
    <string name="institution">Institution</string>
    <string name="sign_Up">SIGN UP</string>
    <string name="Email_address">EmailAddress</string>
    <string name="already_have_an_account">Already have an acount ?</string>
    <string name="todo">TODO</string>
    <string name="find_the_perfect_residency">Find The Perfect Residency</string>
    <string name="discover_the_best_residency_for_you">Discover the best Residency for you</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="bestseller">Bestseller</string>
    <string name="todo1">TODO</string>
    <string name="urban_apartment">Urban Apartment</string>
    <string name="_16_47">$16.47</string>
    <string name="urban__apartment">Urban Apartment</string>
    <string name="__16_47">$16.47</string>
    <string name="Urban_apartment">Urban  Apartment</string>
    <string name="_16_48">$16.48</string>
</resources>