<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/menu"
                android:contentDescription="@string/todo" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/search_btn"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/find_the_perfect_residency"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginStart="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_the_best_residency_for_you"
            android:layout_marginStart="35dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:text="@string/recent"
                    android:textSize="16sp"
                    android:backgroundTint="#E4E4E4"
                    android:textColor="#6B000000"
                    android:layout_marginStart="35dp"
                    android:textStyle="bold" />


                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:text="@string/popular"
                    android:textSize="16sp"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"/>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:text="@string/bestseller"
                    android:textSize="16sp"
                    android:backgroundTint="#E4E4E4"
                    android:textColor="#6B000000"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:src="@drawable/home1"
                        android:scaleType="fitXY"
                        android:transitionName="scale-big"
                        android:contentDescription="@string/todo1" />


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/urban_apartment"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_16_47"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="45dp"
                            android:layout_marginStart="230dp"/>

                    </RelativeLayout>


                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:src="@drawable/home2"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/urban__apartment"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/__16_47"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="45dp"
                            android:layout_marginStart="230dp"/>

                    </RelativeLayout>


                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:src="@drawable/home3"
                        android:transitionName="scale-big"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Urban_apartment"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_16_48"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="45dp"
                            android:layout_marginStart="230dp"/>

                    </RelativeLayout>


                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


            </LinearLayout>
        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/radius"
                android:backgroundTint="@color/black"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/home" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/location" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/message" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/chat" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/account" />
            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

</ScrollView>